# k8s-rust-web

./: Cargo.toml  Dockerfile  workload.yaml
k8s/: deployment.yaml  ingress.yml  make.sh  service.yaml
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/base/secrets/: dockerconfig.json  mksecret.sh
k8s/overlays/dev/: ingress.yaml  kustomization.yaml  replicas.yaml
k8s/overlays/prod/: ingress.yaml  kustomization.yaml  replicas.yaml
src/: main.rs
