[package]
name = "web_env_k8s"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
gethostname = "0.4.3"
local-ip-address = "0.6.1"
minijinja = "2.0.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
